# lyte

./: Cargo.toml
examples/: function.rs  record.rs  shared.rs  sum.rs
src/: check.rs  forall.rs  infer.rs  lib.rs  mapping.rs  query.rs  tests.rs  type.rs  visitor.rs
src/frontend/: function.rs  mod.rs  product.rs  sum.rs  trait.rs
src/snapshots/: lumina_typesystem__tests__inst_from_method_infer_self.snap  lumina_typesystem__tests__inst_functor.snap  lumina_typesystem__tests__inst_generics.snap  lumina_typesystem__tests__inst_intable_for_int.snap  lumina_typesystem__tests__inst_into_float_for_int.snap  lumina_typesystem__tests__inst_into_method-2.snap  lumina_typesystem__tests__inst_product_field.snap  lumina_typesystem__tests__inst_recursive_query.snap  lumina_typesystem__tests__inst_sum_variant.snap
