[package]
name = "lyte"
version = "0.1.0"
authors = ["Simon Larsson <simon.larsson-general@protonmail.com>"]
description = "Rust-like typesystem created for the Lumina project"
license = "MIT"
edition = "2018"

[dependencies]
itertools = "^0.10"
smallvec = "^1.10"
owo-colors = "^3.5"
insta = "^1.21"
